Add fame support.

--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -4,15 +4,15 @@ image="../ffg/img/Item_Chipped Greataxe.dds"
 traits=axe class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
-[ItemWoodenShield]
+[ItemWoodenShieldKnight]
 name={ffg:ITEM_WOODEN_SHIELD}
 image="../ffg/img/Item_WoodenShield.dds"
 traits=shield class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemIronMace]
 name={ffg:ITEM_IRON_MACE}
@@ -20,15 +20,15 @@ image="../ffg/img/Item_Iron Mace.dds"
 traits=hammer class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
-[ItemWoodenShield]
+[ItemWoodenShieldDisciple]
 name={ffg:ITEM_WOODEN_SHIELD}
 image="../ffg/img/Item_WoodenShield.dds"
 traits=shield class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemIronLongsword]
 name={ffg:ITEM_IRON_LONGSWORD}
@@ -36,7 +36,7 @@ image="../ffg/img/Item_IronLongsword.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemOakStaff]
 name={ffg:ITEM_OAK_STAFF}
@@ -44,7 +44,7 @@ image="../ffg/img/Item_Oak Staff.dds"
 traits=staff class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemArcaneBolt]
 name={ffg:ITEM_ARCANE_BOLT}
@@ -52,7 +52,7 @@ image="../ffg/img/Item_Arcane Bolt.dds"
 traits=magic rune class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemReapersScythe]
 name={ffg:ITEM_REAPERS_SCYTHE}
@@ -60,7 +60,7 @@ image="../ffg/img/Item_Reaper's Scythe.dds"
 traits=staff magic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemYewShortbow]
 name={ffg:ITEM_YEW_SHORTBOW}
@@ -68,7 +68,7 @@ image="../ffg/img/Item_Yew Shortbow.dds"
 traits=bow class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemThrowingKnives]
 name={ffg:ITEM_THROWING_KNIVES}
@@ -76,15 +76,15 @@ image="../ffg/img/Item_Throwing Knives.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
-[ItemLuckyCharm]
+[ItemLuckyCharmThief]
 name={ffg:ITEM_LUCKY_CHARM}
 image="../ffg/img/Item_Lucky Charm.dds"
 traits=trinket class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemLeatherArmor]
 name={ffg:ITEM_LEATHER_ARMOR}
@@ -92,15 +92,15 @@ image="../ffg/img/Item_Leather Armor.dds"
 traits=armor light_armor act1
 minfame=insignificant
 maxfame=noteworthy
-gold=75
+price=75
 
-[ItemLeatherArmor]
+[ItemLeatherArmor2]
 name={ffg:ITEM_LEATHER_ARMOR}
 image="../ffg/img/Item_Leather Armor.dds"
 traits=armor light_armor act1
 minfame=insignificant
 maxfame=noteworthy
-gold=75
+price=75
 
 [ItemSteelBroadsword]
 name={ffg:ITEM_STEEL_BROADSWORD}
@@ -108,7 +108,7 @@ image="../ffg/img/Item_Steel Broadsword.dds"
 traits=melee one_handed blade act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemCrossbow]
 name={ffg:ITEM_CROSSBOW}
@@ -116,7 +116,7 @@ image="../ffg/img/Item_Crossbow.dds"
 traits=ranged one_handed bow exotic act1
 minfame=impressive
 maxfame=celebrated
-gold=175
+price=175
 
 [ItemIronBattleaxe]
 name={ffg:ITEM_IRON_BATTLEAXE}
@@ -124,7 +124,7 @@ image="../ffg/img/Item_Iron Battleaxe.dds"
 traits=melee one_handed axe act1
 minfame=insignificant
 maxfame=impressive
-gold=100
+price=100
 
 [ItemLightHammer]
 name={ffg:ITEM_LIGHT_HAMMER}
@@ -132,7 +132,7 @@ image="../ffg/img/Item_Light Hammer.dds"
 traits=melee one_handed hammer act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemIronShield]
 name={ffg:ITEM_IRON_SHIELD}
@@ -140,7 +140,7 @@ image="../ffg/img/Item_Iron Shield.dds"
 traits=one_handed shield act1
 minfame=insignificant
 maxfame=noteworthy
-gold=50
+price=50
 
 [ItemIronShield2]
 name={ffg:ITEM_IRON_SHIELD_2}
@@ -148,7 +148,7 @@ image="../ffg/img/Item_Iron Shield.dds"
 traits=one_handed shield act1
 minfame=insignificant
 maxfame=noteworthy
-gold=50
+price=50
 
 [ItemIronSpear]
 name={ffg:ITEM_IRON_SPEAR}
@@ -156,7 +156,7 @@ image="../ffg/img/Item_Iron Spear.dds"
 traits=melee one_handed exotic act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemSunburst]
 name={ffg:ITEM_SUNBURST}
@@ -164,7 +164,7 @@ image="../ffg/img/Item_Sunburst.dds"
 traits=ranged two_handed magic rune act1
 minfame=insignificant
 maxfame=impressive
-gold=125
+price=125
 
 [ItemElmGreatbow]
 name={ffg:ITEM_ELM_GREATBOW}
@@ -172,7 +172,7 @@ image="../ffg/img/Item_Elm Greatbow.dds"
 traits=ranged two_handed bow act1
 minfame=insignificant
 maxfame=impressive
-gold=100
+price=100
 
 [ItemMagicStaff]
 name={ffg:ITEM_MAGIC_STAFF}
@@ -180,7 +180,7 @@ image="../ffg/img/Item_Magic Staff.dds"
 traits=ranged two_handed staff magic act1
 minfame=insignificant
 maxfame=insignificant
-gold=125
+price=125
 
 [ItemRingOfPower]
 name={ffg:ITEM_RING_OF_POWER}
@@ -188,7 +188,7 @@ image="../ffg/img/Item_Ring of Power.dds"
 traits=other ring act1
 minfame=impressive
 maxfame=legendary
-gold=150
+price=150
 
 [ItemLuckyCharm]
 name={ffg:ITEM_LUCKY_CHARM}
@@ -196,7 +196,7 @@ image="../ffg/img/Item_Lucky Charm.dds"
 traits=other trinket act1
 minfame=insignificant
 maxfame=legendary
-gold=100
+price=100
 
 [ItemHeavyCloak]
 name={ffg:ITEM_HEAVY_CLOAK}
@@ -204,7 +204,7 @@ image="../ffg/img/Item_Heavy Cloak.dds"
 traits=armor cloak act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemChainmail]
 name={ffg:ITEM_CHAINMAIL}
@@ -212,7 +212,7 @@ image="../ffg/img/Item_Chainmail.dds"
 traits=armor heavy_armor act1
 minfame=noteworthy
 maxfame=impressive
-gold=150
+price=150
 
 [ItemSling]
 name={ffg:ITEM_SLING}
@@ -220,7 +220,7 @@ image="../ffg/img/Item_Sling.dds"
 traits=ranged one_handed exotic act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemImmolation]
 name={ffg:ITEM_IMMOLATION}
@@ -228,7 +228,7 @@ image="../ffg/img/Item_Immolation.dds"
 traits=ranged two_handed magic rune act1
 minfame=noteworthy
 maxfame=impressive
-gold=150
+price=150
 
 [ItemScorpionHelm]
 name={ffg:ITEM_SCORPION_HELM}
@@ -236,7 +236,7 @@ image="../ffg/img/Item_Scorpion Helm.dds"
 traits=other helmet act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemManaWeave]
 name={ffg:ITEM_MANA_WEAVE}
@@ -244,7 +244,7 @@ image="../ffg/img/Item_Mana Weave.dds"
 traits=other rune act1
 minfame=noteworthy
 maxfame=legendary
-gold=125
+price=125
 
 [ItemDemonhideLeather]
 name={ffg:ITEM_DEMONHIDE_LEATHER}
@@ -252,7 +252,7 @@ image="../ffg/img/Item_Demonhide Leather.dds"
 traits=armor light_armor act2
 minfame=impressive
 maxfame=heroic
-gold=200
+price=200
 
 [ItemElvenCloak]
 name={ffg:ITEM_ELVEN_CLOAK}
@@ -260,7 +260,7 @@ image="../ffg/img/Item_Elven Cloak.dds"
 traits=armor cloak act2
 minfame=celebrated
 maxfame=legendary
-gold=225
+price=225
 
 [ItemIceStorm]
 name={ffg:ITEM_ICE_STORM}
@@ -268,7 +268,7 @@ image="../ffg/img/Item_Ice Storm.dds"
 traits=ranged two_handed magic rune act2
 minfame=celebrated
 maxfame=legendary
-gold=150
+price=150
 
 [ItemSteelGreatsword]
 name={ffg:ITEM_STEEL_GREATSWORD}
@@ -276,7 +276,7 @@ image="../ffg/img/Item_Steel Greatsword.dds"
 traits=melee two_handed blade act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemDwarvenFirebomb]
 name={ffg:ITEM_DWARVEN_FIREBOMB}
@@ -284,7 +284,7 @@ image="../ffg/img/Item_DwarvenFirebomb.dds"
 traits=ranged one_handed exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemDragontoothHammer]
 name={ffg:ITEM_DRAGONTOOTH_HAMMER}
@@ -292,7 +292,7 @@ image="../ffg/img/Item_Dragontooth Hammer.dds"
 traits=melee two_handed hammer act2
 minfame=heroic
 maxfame=legendary
-gold=250
+price=250
 
 [ItemIronBoundRing]
 name={ffg:ITEM_IRON_BOUND_RING}
@@ -300,7 +300,7 @@ image="../ffg/img/Item_Iron-Bound Ring.dds"
 traits=other ring act2
 minfame=impressive
 maxfame=heroic
-gold=125
+price=125
 
 [ItemTivalCrystal]
 name={ffg:ITEM_TIVAL_CRYSTAL}
@@ -308,7 +308,7 @@ image="../ffg/img/Item_Tival Crystal.dds"
 traits=other trinket act2
 minfame=noteworthy
 maxfame=celebrated
-gold=25
+price=25
 
 [ItemGrindingAxe]
 name={ffg:ITEM_GRINDING_AXE}
@@ -316,7 +316,7 @@ image="../ffg/img/Item_Grinding Axe.dds"
 traits=melee two_handed axe act2
 minfame=legendary
 maxfame=legendary
-gold=200
+price=200
 
 [ItemLightningStrike]
 name={ffg:ITEM_LIGHTNING_STRIKE}
@@ -324,7 +324,7 @@ image="../ffg/img/Item_Lightning Strike.dds"
 traits=ranged two_handed magic rune act2
 minfame=heroic
 maxfame=legendary
-gold=200
+price=200
 
 [ItemMaceOfKellos]
 name={ffg:ITEM_MACE_OF_KELLOS}
@@ -332,7 +332,7 @@ image="../ffg/img/Item_Mace of Kellos.dds"
 traits=melee one_handed hammer act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemLatariLongbow]
 name={ffg:ITEM_LATARI_LONGBOW}
@@ -340,7 +340,7 @@ image="../ffg/img/Item_Latari Longbow.dds"
 traits=ranged two_handed bow act2
 minfame=celebrated
 maxfame=heroic
-gold=200
+price=200
 
 [ItemPlatemail]
 name={ffg:ITEM_PLATEMAIL}
@@ -348,7 +348,7 @@ image="../ffg/img/Item_Platemail.dds"
 traits=armor heavy_armor act2
 minfame=celebrated
 maxfame=legendary
-gold=250
+price=250
 
 [ItemHeavySteelShield]
 name={ffg:ITEM_HEAVY_STEEL_SHIELD}
@@ -356,53 +356,35 @@ image="../ffg/img/Item_Heavy Steel Shield.dds"
 traits=one_handed shield act2
 minfame=celebrated
 maxfame=legendary
-gold=100
+price=100
 
 [ItemDawnblade]
 name={ffg:RELIC_DAWNBLADE}
 image="../ffg/img/Item_Dawnblade.dds"
 traits=blade relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemFortunasDice]
 name={ffg:RELIC_FORTUNAS_DICE}
 image="../ffg/img/Item_Fortuna's Dice.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemShieldOfTheDarkGod]
 name={ffg:RELIC_SHIELD_OF_THE_DARK_GOD}
 image="../ffg/img/Item_Shield of the Dark God.dds"
 traits=shield relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemStaffOfLight]
 name={ffg:RELIC_STAFF_OF_LIGHT}
 image="../ffg/img/Item_Staff of Light.dds"
 traits=staff magic relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemTheShadowRune]
 name={ffg:RELIC_THE_SHADOW_RUNE}
 image="../ffg/img/Item_The Shadow Rune.dds"
 traits=magic rune relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemTrueshot]
 name={ffg:RELIC_TRUESHOT}
 image="../ffg/img/Item_Trueshot.dds"
 traits=bow relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
