--- a/content/D2E/boxed/tctr/items.ini
+++ b/content/D2E/boxed/tctr/items.ini
@@ -4,7 +4,7 @@ image="../../ffg/img/Item_Blessed Armor.dds"
 traits=armor heavy_armor act1
 minfame=celebrated
 maxfame=legendary
-gold=250
+price=250
 
 [ItemBloodthirstyBracers]
 name={ffg:ITEM_BLOODTHIRSTY_BRACERS}
@@ -12,7 +12,7 @@ image="../../ffg/img/Item_Bloodthirsty Bracers.dds"
 traits=other trinket act2
 minfame=impressive
 maxfame=legendary
-gold=125
+price=125
 
 [ItemBoneWand]
 name={ffg:ITEM_BONE_WAND}
@@ -20,7 +20,7 @@ image="../../ffg/img/Item_Bone Wand.dds"
 traits=magic wand act2
 minfame=celebrated
 maxfame=heroic
-gold=200
+price=200
 
 [ItemFistsOfIron]
 name={ffg:ITEM_FISTS_OF_IRON}
@@ -28,7 +28,7 @@ image="../../ffg/img/Item_Fists of Iron.dds"
 traits=exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=125
+price=125
 
 [ItemHornedShield]
 name={ffg:ITEM_HORNED_SHIELD}
@@ -36,7 +36,7 @@ image="../../ffg/img/Item_Horned Shield.dds"
 traits=one_handed shield act2
 minfame=celebrated
 maxfame=legendary
-gold=150
+price=150
 
 [ItemLightningJavelin]
 name={ffg:ITEM_LIGHTNING_JAVELIN}
@@ -44,7 +44,7 @@ image="../../ffg/img/Item_Lightning Javelin.dds"
 traits=magic exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=200
+price=200
 
 [ItemMaskOfHorrors]
 name={ffg:ITEM_MASK_OF_HORRORS}
@@ -52,7 +52,7 @@ image="../../ffg/img/Item_Mask of Horrors.dds"
 traits=other helmet act2
 minfame=impressive
 maxfame=heroic
-gold=75
+price=75
 
 [ItemRunetouchedLeather]
 name={ffg:ITEM_RUNETOUCHED_LEATHER}
@@ -60,7 +60,7 @@ image="../../ffg/img/Item_Rune-Touched Armor.dds"
 traits=armor light_armor act2
 minfame=noteworthy
 maxfame=celebrated
-gold=150
+price=150
 
 [ItemSashOfTheSlayer]
 name={ffg:ITEM_SASH_OF_THE_SLAYER}
@@ -68,29 +68,20 @@ image="../../ffg/img/Item_Sash of the Slayer.dds"
 traits=other belt act2
 minfame=impressive
 maxfame=legendary
-gold=75
+price=75
 
 [ItemRobesOfTheLast]
 name={ffg:RELIC_ROBES_OF_THE_LAST}
 image="../../ffg/img/Item_Robes of the Last.dds"
 traits=armor cloak relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemBonebornBow]
 name={ffg:RELIC_BONEBORN_BOW}
 image="../../ffg/img/Item_Boneborn Bow.dds"
 traits=ranged two_handed bow relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemForewarnedRing]
 name={ffg:RELIC_FOREWARNED_RING}
 image="../../ffg/img/Item_Forewarned Ring.dds"
 traits=other relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
