--- a/content/D2E/boxed/tt/items.ini
+++ b/content/D2E/boxed/tt/items.ini
@@ -4,7 +4,7 @@ image="../../ffg/img/Item_Iron Flail.dds"
 traits=hammer exotic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemSagesTome]
 name={ffg:ITEM_SAGES_TOME}
@@ -12,7 +12,7 @@ image="../../ffg/img/Item_Sage's Tome.dds"
 traits=class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemBlackWidowsWeb]
 name={ffg:ITEM_BLACK_WIDOWS_WEB}
@@ -20,7 +20,7 @@ image="../../ffg/img/Item_Black Widow's Web.dds"
 traits=exotic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemHuntingKnife]
 name={ffg:ITEM_HUNTING_KNIFE}
@@ -28,7 +28,7 @@ image="../../ffg/img/Item_Class_Hunting Knife.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemBeltOfWaterwalking]
 name={ffg:ITEM_BELT_OF_WATERWALKING}
@@ -36,7 +36,7 @@ image="../../ffg/img/Item_Belt of Waterwalking.dds"
 traits=other belt act1
 minfame=insignificant
 maxfame=impressive
-gold=50
+price=50
 
 [ItemBeltOfAlchemy]
 name={ffg:ITEM_BELT_OF_ALCHEMY}
@@ -44,7 +44,7 @@ image="../../ffg/img/Item_Belt of Alchemy.dds"
 traits=other belt act1
 minfame=insignificant
 maxfame=impressive
-gold=25
+price=25
 
 [ItemLifedrainSepter]
 name={ffg:ITEM_LIFEDRAIN_SEPTER}
@@ -52,7 +52,7 @@ image="../../ffg/img/Item_Lifedrain Scepter.dds"
 traits=ranged one_handed magic wand act1
 minfame=noteworthy
 maxfame=impressive
-gold=100
+price=100
 
 [ItemDireFlail]
 name={ffg:ITEM_DIRE_FLAIL}
@@ -60,7 +60,7 @@ image="../../ffg/img/Item_Dire Flail.dds"
 traits=melee two_handed hammer exotic act1
 minfame=noteworthy
 maxfame=celebrated
-gold=150
+price=150
 
 [ItemTrident]
 name={ffg:ITEM_TRIDENT}
@@ -68,7 +68,7 @@ image="../../ffg/img/Item_Trident.dds"
 traits=melee one_handed exotic act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemGuardianAxe]
 name={ffg:ITEM_GUARDIAN_AXE}
@@ -76,7 +76,7 @@ image="../../ffg/img/Item_Guardian Axe.dds"
 traits=melee two_handed axe act1
 minfame=insignificant
 maxfame=impressive
-gold=175
+price=175
 
 [ItemDeflectingShield]
 name={ffg:ITEM_DEFLECTING_SHIELD}
@@ -84,7 +84,7 @@ image="../../ffg/img/Item_Deflecting Shield.dds"
 traits=one_handed shield act1
 minfame=insignificant
 maxfame=impressive
-gold=50
+price=50
 
 [ItemBoomerang]
 name={ffg:ITEM_BOOMERANG}
@@ -92,7 +92,7 @@ image="../../ffg/img/Item_Boomerang.dds"
 traits=ranged one_handed exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=200
+price=200
 
 [ItemStoneArmor]
 name={ffg:ITEM_STONE_ARMOR}
@@ -100,7 +100,7 @@ image="../../ffg/img/Item_Stone Armor.dds"
 traits=armor heavy_armor act2
 minfame=heroic
 maxfame=legendary
-gold=225
+price=225
 
 [ItemBeltOfStrength]
 name={ffg:ITEM_BELT_OF_STRENGTH}
@@ -108,7 +108,7 @@ image="../../ffg/img/Item_Belt of Strength.dds"
 traits=other belt act2
 minfame=impressive
 maxfame=heroic
-gold=100
+price=100
 
 [ItemBlastingRune]
 name={ffg:ITEM_BLASTING_RUNE}
@@ -116,7 +116,7 @@ image="../../ffg/img/Item_Blasting Rune.dds"
 traits=ranged two_handed magic rune act2
 minfame=celebrated
 maxfame=legendary
-gold=200
+price=200
 
 [ItemGlaive]
 name={ffg:ITEM_GLAIVE}
@@ -124,29 +124,20 @@ image="../../ffg/img/Item_Glaive.dds"
 traits=melee two_handed blade exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemImmunityElixir]
 name={ffg:RELIC_IMMUNITY_ELIXIR}
 image="../../ffg/img/Item_Immunity Elixir.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemMendingTalisman]
 name={ffg:RELIC_MENDING_TALISMAN}
 image="../../ffg/img/Item_Mending Talisman.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemWorkmansRing]
 name={ffg:RELIC_WORKMANS_RING}
 image="../../ffg/img/Item_Workman's Ring.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
