--- a/content/D2E/boxed/lor/items.ini
+++ b/content/D2E/boxed/lor/items.ini
@@ -4,7 +4,7 @@ image="../../ffg/img/Item_Smoking Vials.dds"
 traits=exotic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemHuntingSpear]
 name={ffg:ITEM_HUNTING_SPEAR}
@@ -12,7 +12,7 @@ image="../../ffg/img/Item_Hunting Spear.dds"
 traits=exotic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemSkinningKnife]
 name={ffg:ITEM_SKINNING_KNIFE}
@@ -20,7 +20,7 @@ image="../../ffg/img/Item_Skinning Knife.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemStaffOfTheGrave]
 name={ffg:ITEM_STAFF_OF_THE_GRAVE}
@@ -28,7 +28,7 @@ image="../../ffg/img/Item_Staff of the Grave.dds"
 traits=staff magic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemLeatherWhip]
 name={ffg:ITEM_LEATHER_WHIP}
@@ -36,7 +36,7 @@ image="../../ffg/img/Item_Leather Whip.dds"
 traits=exotic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemTheDeadMansCompass]
 name={ffg:ITEM_THE_DEAD_MANS_COMPASS}
@@ -44,7 +44,7 @@ image="../../ffg/img/Item_The Dead Man's Compass.dds"
 traits=trinket class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemBowOfBone]
 name={ffg:ITEM_BOW_OF_BONE}
@@ -52,7 +52,7 @@ image="../../ffg/img/Item_Bow of Bone.dds"
 traits=ranged two_handed bow act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemTeleportaionRune]
 name={ffg:ITEM_TELEPORTAION_RUNE}
@@ -60,7 +60,7 @@ image="../../ffg/img/Item_Teleportation Rune.dds"
 traits=ranged two_handed magic rune act1
 minfame=insignificant
 maxfame=impressive
-gold=125
+price=125
 
 [ItemRunePlate]
 name={ffg:ITEM_RUNE_PLATE}
@@ -68,7 +68,7 @@ image="../../ffg/img/Item_Rune Plate.dds"
 traits=armor heavy_armor act1
 minfame=impressive
 maxfame=legendary
-gold=225
+price=225
 
 [ItemShieldOfLight]
 name={ffg:ITEM_SHIELD_OF_LIGHT}
@@ -76,7 +76,7 @@ image="../../ffg/img/Item_Shield of Light.dds"
 traits=one_handed shield act1
 minfame=noteworthy
 maxfame=celebrated
-gold=75
+price=75
 
 [ItemThiefsVest]
 name={ffg:ITEM_THIEFS_VEST}
@@ -84,7 +84,7 @@ image="../../ffg/img/Item_Thief's Vest.dds"
 traits=armor light_armor act1
 minfame=noteworthy
 maxfame=celebrated
-gold=100
+price=100
 
 [ItemElvenBoots]
 name={ffg:ITEM_ELVEN_BOOTS}
@@ -92,7 +92,7 @@ image="../../ffg/img/Item_Elven Boots.dds"
 traits=other boots act1
 minfame=noteworthy
 maxfame=celebrated
-gold=50
+price=50
 
 [ItemPoisonedBlowgun]
 name={ffg:ITEM_POISONED_BLOWGUN}
@@ -100,7 +100,7 @@ image="../../ffg/img/Item_Poisoned Blowgun.dds"
 traits=ranged one_handed exotic act1
 minfame=noteworthy
 maxfame=celebrated
-gold=100
+price=100
 
 [ItemMaceOfAver]
 name={ffg:ITEM_MACE_OF_AVER}
@@ -108,7 +108,7 @@ image="../../ffg/img/Item_Mace of Aver.dds"
 traits=melee two_handed hammer act1
 minfame=noteworthy
 maxfame=celebrated
-gold=150
+price=150
 
 [ItemSerpentDagger]
 name={ffg:ITEM_SERPENT_DAGGER}
@@ -116,7 +116,7 @@ image="../../ffg/img/Item_Serpent Dagger.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemBeardedAxe]
 name={ffg:ITEM_BEARDED_AXE}
@@ -124,7 +124,7 @@ image="../../ffg/img/Item_Bearded Axe.dds"
 traits=melee two_handed axe act1
 minfame=impressive
 maxfame=heroic
-gold=175
+price=175
 
 [ItemRageBlade]
 name={ffg:ITEM_RAGE_BLADE}
@@ -132,7 +132,7 @@ image="../../ffg/img/Item_Rage Blade.dds"
 traits=melee one_handed blade act2
 minfame=heroic
 maxfame=legendary
-gold=200
+price=200
 
 [ItemIronClaws]
 name={ffg:ITEM_IRON_CLAWS}
@@ -140,7 +140,7 @@ image="../../ffg/img/Item_Iron Claws.dds"
 traits=melee one_handed blade exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemObsidianGreataxe]
 name={ffg:ITEM_OBSIDIAN_GREATAXE}
@@ -148,7 +148,7 @@ image="../../ffg/img/Item_Obsidian Greataxe.dds"
 traits=melee two_handed axe act2
 minfame=heroic
 maxfame=legendary
-gold=225
+price=225
 
 [ItemRuneOfMisery]
 name={ffg:ITEM_RUNE_OF_MISERY}
@@ -156,7 +156,7 @@ image="../../ffg/img/Item_Rune of Misery.dds"
 traits=ranged two_handed magic rune act2
 minfame=celebrated
 maxfame=heroic
-gold=175
+price=175
 
 [ItemBowOfTheEclipse]
 name={ffg:ITEM_BOW_OF_THE_ECLIPSE}
@@ -164,7 +164,7 @@ image="../../ffg/img/Item_Bow of the Eclipse.dds"
 traits=ranged two_handed bow act2
 minfame=heroic
 maxfame=legendary
-gold=225
+price=225
 
 [ItemStaffOfTheWild]
 name={ffg:ITEM_STAFF_OF_THE_WILD}
@@ -172,7 +172,7 @@ image="../../ffg/img/Item_Staff of the Wild.dds"
 traits=staff magic act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemObsidianScalemail]
 name={ffg:ITEM_OBSIDIAN_SCALEMAIL}
@@ -180,7 +180,7 @@ image="../../ffg/img/Item_Obsidian Scalemail.dds"
 traits=armor heavy_armor act2
 minfame=heroic
 maxfame=legendary
-gold=275
+price=275
 
 [ItemShroudOfDusk]
 name={ffg:ITEM_SHROUD_OF_DUSK}
@@ -188,7 +188,7 @@ image="../../ffg/img/Item_Shroud of Dusk.dds"
 traits=other helmet act2
 minfame=celebrated
 maxfame=legendary
-gold=150
+price=150
 
 [ItemBlackIronHelm]
 name={ffg:ITEM_BLACK_IRON_HELM}
@@ -196,7 +196,7 @@ image="../../ffg/img/Item_Black Iron Helm.dds"
 traits=other helmet act2
 minfame=impressive
 maxfame=legendary
-gold=150
+price=150
 
 [ItemCloakOfDeception]
 name={ffg:ITEM_CLOAK_OF_DECEPTION}
@@ -204,29 +204,20 @@ image="../../ffg/img/Item_Cloak of Deception.dds"
 traits=armor cloak act2
 minfame=heroic
 maxfame=legendary
-gold=200
+price=200
 
 [ItemGauntletsOfPower]
 name={ffg:RELIC_GAUNTLETS_OF_POWER}
 image="../../ffg/img/Item_Gauntlets of Power.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemLivingHeart]
 name={ffg:RELIC_LIVING_HEART}
 image="../../ffg/img/Item_Living Heart.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemSunStone]
 name={ffg:RELIC_SUN_STONE}
 image="../../ffg/img/Item_Sun Stone.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
