--- a/content/D2E/boxed/mob/items.ini
+++ b/content/D2E/boxed/mob/items.ini
@@ -4,7 +4,7 @@ image="../../ffg/img/Item_Mistbane.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=impressive
-gold=100
+price=100
 
 [ItemCorpsebugBrooch]
 name={ffg:ITEM_CORPSEBUG_BROOCH}
@@ -12,7 +12,7 @@ image="../../ffg/img/Item_Corpsebug Brooch.dds"
 traits=other trinket act1
 minfame=noteworthy
 maxfame=heroic
-gold=75
+price=75
 
 [ItemSoulstone]
 name={ffg:ITEM_SOULSTONE}
@@ -20,7 +20,7 @@ image="../../ffg/img/Item_Soulstone.dds"
 traits=ranged two_handed magic rune act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemBloodscriptRing]
 name={ffg:ITEM_BLOODSCRIPT_RING}
@@ -28,7 +28,7 @@ image="../../ffg/img/Item_Bloodscript Ring.dds"
 traits=other ring act1
 minfame=insignificant
 maxfame=celebrated
-gold=75
+price=75
 
 [ItemWitchHazelBow]
 name={ffg:ITEM_WITCH_HAZEL_BOW}
@@ -36,7 +36,7 @@ image="../../ffg/img/Item_Witch Hazel Bow.dds"
 traits=ranged two_handed bow magic act1
 minfame=noteworthy
 maxfame=impressive
-gold=125
+price=125
 
 [ItemMarshCloak]
 name={ffg:ITEM_MARSH_CLOAK}
@@ -44,7 +44,7 @@ image="../../ffg/img/Item_Marsh Cloak.dds"
 traits=armor cloak act1
 minfame=impressive
 maxfame=heroic
-gold=150
+price=150
 
 [ItemBattleTome]
 name={ffg:ITEM_BATTLE_TOME}
@@ -52,7 +52,7 @@ image="../../ffg/img/Item_Battle Tome.dds"
 traits=ranged one_handed magic book act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemSoulboundSword]
 name={ffg:ITEM_SOULBOUND_SWORD}
@@ -60,29 +60,20 @@ image="../../ffg/img/Item_Soulbound Sword.dds"
 traits=melee two_handed blade act1
 minfame=impressive
 maxfame=celebrated
-gold=100
+price=100
 
 [ItemFearEater]
 name={ffg:RELIC_FEAR_EATER}
 image="../../ffg/img/Item_Fear Eater.dds"
 traits=blade relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemUndertakersCoat]
 name={ffg:RELIC_UNDERTAKERS_COAT}
 image="../../ffg/img/Item_Undertaker's Coat.dds"
 traits=relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemTheWhiteCrown]
 name={ffg:RELIC_THE_WHITE_CROWN}
 image="../../ffg/img/Item_The White Crown.dds"
 traits=helmet relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
