--- a/content/D2E/boxed/son/items.ini
+++ b/content/D2E/boxed/son/items.ini
@@ -4,7 +4,7 @@ image="../../ffg/img/Item_Traveler's Blade.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemLute]
 name={ffg:ITEM_LUTE}
@@ -12,7 +12,7 @@ image="../../ffg/img/Item_Lute.dds"
 traits=trinket class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemPrismaticStaff]
 name={ffg:ITEM_PRISMATIC_STAFF}
@@ -20,7 +20,7 @@ image="../../ffg/img/Item_Prismatic Staff.dds"
 traits=staff magic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemFeatheredHatchet]
 name={ffg:ITEM_FEATHERED_HATCHET}
@@ -28,7 +28,7 @@ image="../../ffg/img/Item_Feathered Hatchet.dds"
 traits=axe exotic class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemTribalCloak]
 name={ffg:ITEM_TRIBAL_CLOAK}
@@ -36,7 +36,7 @@ image="../../ffg/img/Item_Tribal Cloak.dds"
 traits=cloak class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemRustedHandaxe]
 name={ffg:ITEM_RUSTED_HANDAXE}
@@ -44,7 +44,7 @@ image="../../ffg/img/Item_Rusted Handaxe.dds"
 traits=axe class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemJaggedHandaxe]
 name={ffg:ITEM_JAGGED_HANDAXE}
@@ -52,7 +52,7 @@ image="../../ffg/img/Item_Jagged Handaxe.dds"
 traits=axe class
 minfame=insignificant
 maxfame=insignificant
-gold=25
+price=25
 
 [ItemIncendiaryArrows]
 name={ffg:ITEM_INCENDIARY_ARROWS}
@@ -60,7 +60,7 @@ image="../../ffg/img/Item_Incendiary Arrows.dds"
 traits=other trinket act1
 minfame=noteworthy
 maxfame=celebrated
-gold=50
+price=50
 
 [ItemIronboundRune]
 name={ffg:ITEM_IRONBOUND_RUNE}
@@ -68,7 +68,7 @@ image="../../ffg/img/Item_Ironbound Rune.dds"
 traits=ranged two_handed magic rune act1
 minfame=insignificant
 maxfame=impressive
-gold=175
+price=175
 
 [ItemBootsOfIron]
 name={ffg:ITEM_BOOTS_OF_IRON}
@@ -76,7 +76,7 @@ image="../../ffg/img/Item_Boots of Iron.dds"
 traits=other boots act1
 minfame=insignificant
 maxfame=impressive
-gold=50
+price=50
 
 [ItemBaronsCloak]
 name={ffg:ITEM_BARONS_CLOAK}
@@ -84,7 +84,7 @@ image="../../ffg/img/Item_Baron's Cloak.dds"
 traits=armor cloak act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemJeweledMace]
 name={ffg:ITEM_JEWELED_MACE}
@@ -92,7 +92,7 @@ image="../../ffg/img/Item_Jeweled Mace.dds"
 traits=melee one_handed hammer act1
 minfame=insignificant
 maxfame=impressive
-gold=100
+price=100
 
 [ItemPhoenixPendant]
 name={ffg:ITEM_PHOENIX_PENDANT}
@@ -100,7 +100,7 @@ image="../../ffg/img/Item_Phoenix Pendant.dds"
 traits=other trinket act1
 minfame=insignificant
 maxfame=celebrated
-gold=50
+price=50
 
 [ItemBloodyDagger]
 name={ffg:ITEM_BLOODY_DAGGER}
@@ -108,7 +108,7 @@ image="../../ffg/img/Item_Bloody Dagger.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=celebrated
-gold=75
+price=75
 
 [ItemBoneBlade]
 name={ffg:ITEM_BONE_BLADE}
@@ -116,7 +116,7 @@ image="../../ffg/img/Item_Bone Blade.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=celebrated
-gold=125
+price=125
 
 [ItemCityGuardsBow]
 name={ffg:ITEM_CITY_GUARDS_BOW}
@@ -124,7 +124,7 @@ image="../../ffg/img/Item_City Guard's Bow.dds"
 traits=ranged two_handed bow act1
 minfame=insignificant
 maxfame=impressive
-gold=75
+price=75
 
 [ItemCloakOfMists]
 name={ffg:ITEM_CLOAK_OF_MISTS}
@@ -132,7 +132,7 @@ image="../../ffg/img/Item_Cloak of Mists.dds"
 traits=armor cloak act1
 minfame=impressive
 maxfame=heroic
-gold=100
+price=100
 
 [ItemIronboundShield]
 name={ffg:ITEM_IRONBOUND_SHIELD}
@@ -140,7 +140,7 @@ image="../../ffg/img/Item_IronboundShield.dds"
 traits=one_handed shield act2
 minfame=heroic
 maxfame=legendary
-gold=200
+price=200
 
 [ItemIronboundGlaive]
 name={ffg:ITEM_IRONBOUND_GLAIVE}
@@ -148,7 +148,7 @@ image="../../ffg/img/Item_Ironbound Glaive.dds"
 traits=melee two_handed blade staff act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemShadowTome]
 name={ffg:ITEM_SHADOW_TOME}
@@ -156,7 +156,7 @@ image="../../ffg/img/Item_Shadow Tome.dds"
 traits=other book act2
 minfame=heroic
 maxfame=legendary
-gold=125
+price=125
 
 [ItemNerekhallPlate]
 name={ffg:ITEM_NEREKHALL_PLATE}
@@ -164,7 +164,7 @@ image="../../ffg/img/Item_Nerekhall Plate.dds"
 traits=armor heavy_armor act2
 minfame=celebrated
 maxfame=legendary
-gold=200
+price=200
 
 [ItemRatToothDagger]
 name={ffg:ITEM_RAT_TOOTH_DAGGER}
@@ -172,7 +172,7 @@ image="../../ffg/img/Item_Rat-Tooth Dagger.dds"
 traits=melee one_handed blade exotic act2
 minfame=celebrated
 maxfame=legendary
-gold=175
+price=175
 
 [ItemRuneOfBlades]
 name={ffg:ITEM_RUNE_OF_BLADES}
@@ -180,7 +180,7 @@ image="../../ffg/img/Item_Rune of Blades.dds"
 traits=ranged two_handed magic rune act2
 minfame=celebrated
 maxfame=legendary
-gold=150
+price=150
 
 [ItemRepeatingCrossbow]
 name={ffg:ITEM_REPEATING_CROSSBOW}
@@ -188,7 +188,7 @@ image="../../ffg/img/Item_Repeating Crossbow.dds"
 traits=ranged two_handed bow exotic act2
 minfame=heroic
 maxfame=legendary
-gold=200
+price=200
 
 [ItemGoldenMask]
 name={ffg:ITEM_GOLDEN_MASK}
@@ -196,7 +196,7 @@ image="../../ffg/img/Item_Golden Mask.dds"
 traits=other helmet act2
 minfame=impressive
 maxfame=legendary
-gold=75
+price=75
 
 [ItemVestmentsOfKellos]
 name={ffg:ITEM_VESTMENTS_OF_KELLOS}
@@ -204,7 +204,7 @@ image="../../ffg/img/Item_Vestments of Kellos.dds"
 traits=armor light_armor act2
 minfame=impressive
 maxfame=legendary
-gold=200
+price=200
 
 [ItemStarOfKellos]
 name={ffg:ITEM_STAR_OF_KELLOS}
@@ -212,29 +212,20 @@ image="../../ffg/img/Item_Star of Kellos.dds"
 traits=other trinket act2
 minfame=heroic
 maxfame=legendary
-gold=175
+price=175
 
 [ItemShadowPlotter]
 name={ffg:RELIC_SHADOW_PLOTTER}
 image="../../ffg/img/Item_Shadow Plotter.dds"
 traits=trinket relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemYnfernalRune]
 name={ffg:RELIC_YNFERNAL_RUNE}
 image="../../ffg/img/Item_Ynfernael Rune.dds"
 traits=magic rune relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
 [ItemSpiritedScythe]
 name={ffg:RELIC_SPIRITED_SCYTHE}
 image="../../ffg/img/Item_Spirited Scythe.dds"
 traits=blade staff relic
-minfame=insignificant
-maxfame=insignificant
-gold=0
 
