Fixing peril/mythos data

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -199,6 +199,7 @@ event1=
 button1="Continue"
 
 [PerilMinorPool]
+buttons=1
 event1=PerilMinor1 PerilMinor22H PerilMinor23H PerilMinor24H PerilMinor3 PerilMinor4 PerilMinor5 PerilMinor10 PerilMinor11 PerilMinor12 PerilMinor13
 button1="Continue"
 randomevents=true
@@ -207,6 +208,7 @@ trigger=EndRound
 display=false
 
 [PerilMajorPool]
+buttons=1
 event1=PerilMajor1 PerilMajor2 PerilMajor4 PerilMajor9 PerilMajor11
 button1="Continue"
 randomevents=true
@@ -215,6 +217,7 @@ trigger=EndRound
 display=false
 
 [PerilDeadlyPool]
+buttons=1
 event1=PerilDeadly1 PerilDeadly2
 button1="Continue"
 randomevents=true
