--- a/content/MoM/base/tokens.ini
+++ b/content/MoM/base/tokens.ini
@@ -33,6 +33,20 @@ y=130
 height=130
 width=130
 
+[TokenDarkness]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-512x1024-fmt10.dds"
+x=6
+y=7
+height=115
+width=115
+
+[TokenFire]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-512x1024-fmt10.dds"
+x=136
+y=137
+height=115
+width=115
+
 [TokenBarricadeInside]
 image="img/barricadeinside.png"
 pps=117
