Adding $restock to editor.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -1,3 +1,7 @@
+;Dummy peril to set var names
+[PerilEmpty]
+conditions=$restock,==,0 
+
 [PerilFireSpread]
 text={ffg:COMMON_MYTHOS_FIRE:{0}:{rnd:hero}}
 event1=
