new component variables {c:} to get specific text for components inside event texts.

--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -57,7 +57,7 @@ traits=inside small cave
 reverse=TileSideHallway1
 
 [TileSideDiningRoom1E]
-name={ffg:TILE_DINING_ROOM_1_E_MAD01}
+name={ffg:TILE_DINING_ROOM_MAD01}
 image="../ffg/img/Tile_Dining_Room_MAD01.dds"
 traits=inside medium storage kitchen
 reverse=TileSideGraveyard
