Adding common and unique traits to items.

--- a/content/MoM/base/items.ini
+++ b/content/MoM/base/items.ini
@@ -1,302 +1,302 @@
 [ItemCommon18Derringer]
 name={ffg:COMMON_ITEM_18_DERRINGER}
 image=../ffg/img/CommonItem_18Derringer.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommon38Revolver]
 name={ffg:COMMON_ITEM_38_REVOLVER}
 image=../ffg/img/CommonItem_38Revolver.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommon45Automatic]
 name={ffg:COMMON_ITEM_45_AUTOMATIC}
 image=../ffg/img/CommonItem_45Automatics.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommon2x4]
 name={ffg:COMMON_ITEM_2x4}
 image=../ffg/img/CommonItem_2x4.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonArcaneManuscript]
 name={ffg:COMMON_ITEM_ARCANE_MANUSCRIPT}
 image=../ffg/img/CommonItem_ArcaneManuscript.dds
-traits=tome
+traits=tome common
 
 [ItemCommonAxe]
 name={ffg:COMMON_ITEM_AXE}
 image=../ffg/img/CommonItem_Axe.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonBandages]
 name={ffg:COMMON_ITEM_BANDAGES}
 image=../ffg/img/CommonItem_Bandages.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonBrassKnuckles]
 name={ffg:COMMON_ITEM_BRASS_KNUCKLES}
 image=../ffg/img/CommonItem_BrassKnuckles.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonBullseyeLantern]
 name={ffg:COMMON_ITEM_BULLSEYE_LANTERN}
 image=../ffg/img/CommonItem_BullseyeLantern.dds
-traits=lightsource
+traits=lightsource common
 
 [ItemCommonCandles]
 name={ffg:COMMON_ITEM_CANDLES}
 image=../ffg/img/CommonItem_Candles.dds
-traits=lightsource
+traits=lightsource common
 
 [ItemCommonCarbineRifle]
 name={ffg:COMMON_ITEM_CARBINE_RIFLE}
 image=../ffg/img/CommonItem_CarbineRifle.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommonCrowbar]
 name={ffg:COMMON_ITEM_CROWBAR}
 image=../ffg/img/CommonItem_Crowbar.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonDynamite]
 name={ffg:COMMON_ITEM_DYNAMITE}
 image=../ffg/img/CommonItem_Dynamite.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonElderSignPendant]
 name={ffg:COMMON_ITEM_ELDER_SIGN_PENDANT}
 image=../ffg/img/CommonItem_ElderSignPendant.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonElderWard]
 name={ffg:COMMON_ITEM_ELDER_WARD}
 image=../ffg/img/CommonItem_ElderWard.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonFireExtinguisher]
 name={ffg:COMMON_ITEM_FIRE_EXTINGUISHER}
 image=../ffg/img/CommonItem_FireExtinguisher.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonFlareGun]
 name={ffg:COMMON_ITEM_FLARE_GUN}
 image=../ffg/img/CommonItem_FlareGun.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonHolyCross]
 name={ffg:COMMON_ITEM_HOLY_CROSS}
 image=../ffg/img/CommonItem_Crucifix.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonHolyWater]
 name={ffg:COMMON_ITEM_HOLY_WATER}
 image=../ffg/img/CommonItem_HolyWater.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonKeroseneLantern]
 name={ffg:COMMON_ITEM_KEROSENE_LANTERN}
 image=../ffg/img/CommonItem_KeroseneLantern.dds
-traits=lightsource
+traits=lightsource common
 
 [ItemCommonKingJamesBible]
 name={ffg:COMMON_ITEM_KING_JAMES_BIBLE}
 image=../ffg/img/CommonItem_KingJamesBible.dds
-traits=tome
+traits=tome common
 
 [ItemCommonKnife]
 name={ffg:COMMON_ITEM_KNIFE}
 image=../ffg/img/CommonItem_Knife.dds
-traits=weapon bladedweapon
+traits=weapon bladedweapon common
 
 [ItemCommonLeadPipe]
 name={ffg:COMMON_ITEM_LEAD_PIPE}
 image=../ffg/img/CommonItem_LeadPipe.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonLuckyCigaretteCase]
 name={ffg:COMMON_ITEM_LUCKY_CIGARETTE_CASE}
 image=../ffg/img/CommonItem_LuckyCigaretteCase.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonLuckyRabbitsFoot]
 name={ffg:COMMON_ITEM_LUCKY_RABBITS_FOOT}
 image=../ffg/img/CommonItem_LuckyRabbitsFoot.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonMachete]
 name={ffg:COMMON_ITEM_MACHETE}
 image=../ffg/img/CommonItem_Machete.dds
-traits=weapon bladedweapon
+traits=weapon bladedweapon common
 
 [ItemCommonMagnifyingGlass]
 name={ffg:COMMON_ITEM_MAGNIFYING_GLASS}
 image=../ffg/img/CommonItem_MagnifyingGlass.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonMeatCleaver]
 name={ffg:COMMON_ITEM_MEAT_CLEAVER}
 image=../ffg/img/CommonItem_MeatCleaver.dds
-traits=weapon bladedweapon
+traits=weapon bladedweapon common
 
 [ItemCommonMedicalTextbook]
 name={ffg:COMMON_ITEM_MEDICAL_TEXTBOOK}
 image=../ffg/img/CommonItem_MedicalTextbook.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonPickaxe]
 name={ffg:COMMON_ITEM_PICKAXE}
 image=../ffg/img/CommonItem_Pickaxe.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonPocketWatch]
 name={ffg:COMMON_ITEM_POCKET_WATCH}
 image=../ffg/img/CommonItem_PocketWatch.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonRitualDagger]
 name={ffg:COMMON_ITEM_RITUAL_DAGGER}
 image=../ffg/img/CommonItem_RitualDagger.dds
-traits=weapon bladedweapon
+traits=weapon bladedweapon common
 
 [ItemCommonSedatives]
 name={ffg:COMMON_ITEM_SEDATIVES}
 image=../ffg/img/CommonItem_Sedative.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonShotgun]
 name={ffg:COMMON_ITEM_SHOTGUN}
 image=../ffg/img/CommonItem_Shotgun.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommonShovel]
 name={ffg:COMMON_ITEM_SHOVEL}
 image=../ffg/img/CommonItem_Shovel.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonSledgehammer]
 name={ffg:COMMON_ITEM_SLEDGEHAMMER}
 image=../ffg/img/CommonItem_Sledgehammer.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonTommyGun]
 name={ffg:COMMON_ITEM_TOMMY_GUN}
 image=../ffg/img/CommonItem_TommyGun.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommonTorch]
 name={ffg:COMMON_ITEM_TORCH}
 image=../ffg/img/CommonItem_Torch.dds
-traits=weapon heavyweapon lightsource
+traits=weapon heavyweapon lightsource common
 
 [ItemCommonWhiskey]
 name={ffg:COMMON_ITEM_WHISKEY}
 image=../ffg/img/CommonItem_Whiskey.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonWrench]
 name={ffg:COMMON_ITEM_WRENCH}
 image=../ffg/img/CommonItem_Wrench.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemUniqueBrassKey]
 name={ffg:UNIQUE_ITEM_BRASS_KEY}
 image=../ffg/img/UniqueItem_BrassKey.dds
-traits=key
+traits=key unique
 
 [ItemUniqueCircumstantialEvidence]
 name={ffg:UNIQUE_ITEM_CIRCUMSTANTIAL_EVIDENCE}
 image=../ffg/img/UniqueItem_CircumstantialEvidence.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueConclusiveEvidence]
 name={ffg:UNIQUE_ITEM_CONCLUSIVE_EVIDENCE}
 image=../ffg/img/UniqueItem_ConclusiveEvidence.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueCultSigil]
 name={ffg:UNIQUE_ITEM_CULT_SIGIL}
 image=../ffg/img/UniqueItem_CultSigil.dds
-traits=evidence key
+traits=evidence key unique
 
 [ItemUniqueDukeTheDog]
 name={ffg:UNIQUE_ITEM_DUKE_THE_DOG}
 image=../ffg/img/UniqueItem_DukeTheDog.dds
-traits=ally
+traits=ally unique
 
 [ItemUniqueFluxStabilizer]
 name={ffg:UNIQUE_ITEM_FLUX_STABILIZER}
 image=../ffg/img/UniqueItem_FluxStabilizer.dds
-traits=equipment
+traits=equipment unique
 
 [ItemUniqueForensicEvidence]
 name={ffg:UNIQUE_ITEM_FORENSIC_EVIDENCE}
 image=../ffg/img/UniqueItem_ForensicEvidence.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueHandcuffs]
 name={ffg:UNIQUE_ITEM_HANDCUFFS}
 image=../ffg/img/UniqueItem_Handcuffs.dds
-traits=equipment
+traits=equipment unique
 
 [ItemUniqueGoldKey]
 name={ffg:UNIQUE_ITEM_GOLD_KEY}
 image=../ffg/img/UniqueItem_GoldKey.dds
-traits=key
+traits=key unique
 
 [ItemUniqueGrotesqueStone]
 name={ffg:UNIQUE_ITEM_GROTESQUE_STONE}
 image=../ffg/img/UniqueItem_GrotesqueStone.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueIncriminatingEvidence]
 name={ffg:UNIQUE_ITEM_INCRIMINATING_EVIDENCE}
 image=../ffg/img/UniqueItem_IncriminatingEvidence.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueOilLamp]
 name={ffg:UNIQUE_ITEM_OIL_LAMP}
 image=../ffg/img/UniqueItem_OilLamp.dds
-traits=lightsource
+traits=lightsource unique
 
 [ItemUniqueOldJournal]
 name={ffg:UNIQUE_ITEM_OLD_JOURNAL}
 image=../ffg/img/UniqueItem_OldJournal.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueOldKeys]
 name={ffg:UNIQUE_ITEM_OLD_KEYS}
 image=../ffg/img/UniqueItem_OldKeys.dds
-traits=key
+traits=key unique
 
 [ItemUniqueMissingLink]
 name={ffg:UNIQUE_ITEM_MISSING_LINK}
 image=../ffg/img/UniqueItem_MissingLink.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniquePhotographicEvidence]
 name={ffg:UNIQUE_ITEM_PHOTOGRAPHIC_EVIDENCE}
 image=../ffg/img/UniqueItem_PhotographicEvidence.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniquePuzzleBox]
 name={ffg:UNIQUE_ITEM_PUZZLE_BOX}
 image=../ffg/img/UniqueItem_PuzzleBox.dds
-traits=equipment
+traits=equipment unique
 
 [ItemUniqueRitualComponents]
 name={ffg:UNIQUE_ITEM_RITUAL_COMPONENTS}
 image=../ffg/img/UniqueItem_RitualComponents.dds
-traits=evidence
+traits=evidence unique
 
 [ItemUniqueRope]
 name={ffg:UNIQUE_ITEM_ROPE}
 image=../ffg/img/UniqueItem_Rope.dds
-traits=equipment
+traits=equipment unique
 
 [ItemUniqueSilverKey]
 name={ffg:UNIQUE_ITEM_SILVER_KEY}
 image=../ffg/img/UniqueItem_SilverKey.dds
-traits=key
+traits=key unique
 
 [ItemSpellFeedTheMind]
 name={ffg:SPELL_FEED_THE_MIND}
