--- a/content/MoM/btt/items.ini
+++ b/content/MoM/btt/items.ini
@@ -1,47 +1,47 @@
 [ItemCommon25Automatic]
 name={ffg:COMMON_ITEM_25_AUTOMATIC}
 image=../ffg/img/CommonItem_25_Automatic.dds
-traits=weapon firearm
+traits=weapon firearm common
 
 [ItemCommonBlackjack]
 name={ffg:COMMON_ITEM_BLACKJACK}
 image=../ffg/img/CommonItem_Blackjack.dds
-traits=weapon heavyweapon
+traits=weapon heavyweapon common
 
 [ItemCommonEnchantedBlade]
 name={ffg:COMMON_ITEM_ENCHANTED_BLADE}
 image=../ffg/img/CommonItem_EnchantedBlade.dds
-traits=weapon bladedweapon
+traits=weapon bladedweapon common
 
 [ItemCommonFineClothes]
 name={ffg:COMMON_ITEM_FINE_CLOTHES}
 image=../ffg/img/CommonItem_FineClothes.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonScribesJournal]
 name={ffg:COMMON_ITEM_SCRIBES_JOURNAL}
 image=../ffg/img/CommonItem_ScribesJournal.dds
-traits=tome
+traits=tome common
 
 [ItemCommonRazor]
 name={ffg:COMMON_ITEM_RAZOR}
 image=../ffg/img/CommonItem_Razor.dds
-traits=weapon bladedweapon
+traits=weapon bladedweapon common
 
 [ItemCommonTomeOfHorrors]
 name={ffg:COMMON_ITEM_TOME_OF_HORRORS}
 image=../ffg/img/CommonItem_TomeOfHorrors.dds
-traits=equipment
+traits=equipment common
 
 [ItemCommonTomeOfSecrets]
 name={ffg:COMMON_ITEM_TOME_OF_SECRETS}
 image=../ffg/img/CommonItem_TomeOfSecrets.dds
-traits=tome
+traits=tome unique
 
 [ItemUniqueCultistsJournal]
 name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
 image=../ffg/img/UniqueItem_CultistsJournal.dds
-traits=evidence tome
+traits=evidence tome unique
 
 [ItemSpellPoisonMist]
 name={ffg:SPELL_POISON_MIST}
