Placeholder Dunwich Horror data.

--- a/content/MoM/base/activations.ini
+++ b/content/MoM/base/activations.ini
@@ -1,3 +1,8 @@
+[MonsterActivationDunwichHorror]
+ability="The {0} moves 2 spaces toward the nearest investigator. Then it attacks the investigator in its space who has suffered the least Damage."
+master="The creature gathers its tangle of limbs together and smashes a portion of its bulk down on you. Suffer 3 Damage ( negates). Then, if you suffered any Damage, become Stunned and Dazed."
+movebutton="Unable to Attack"
+
 [MonsterActivationByakhee01]
 ability={ffg:MONSTER_BYAKHEE_MOVE_01}
 master={ffg:MONSTER_BYAKHEE_ATTACK_01}
