--- a/content/MoM/base/evade.ini
+++ b/content/MoM/base/evade.ini
@@ -1,3 +1,7 @@
+[EvadeDunwichHorror]
+monster=DunwichHorror
+text="You duck to race past the horrifying abomination when suddenly its human-like face appears before you, burbling nonsense; suffer 2 Horror ( negates). If you suffer any Horror, forfeit your action."
+
 [EvadeByakhee01]
 monster=Byakhee
 text={ffg:MONSTER_BYAKHEE_EVADE_01}
