--- a/content/MoM/base/horror.ini
+++ b/content/MoM/base/horror.ini
@@ -1,3 +1,7 @@
+[HorrorDunwichHorror]
+monster=DunwichHorror
+text="The thing's complex and improbable anatomy drives reason from your mind, making you doubt what you thought you understood; discard 1 Clue. The more you dwell upon it, the more your stomach revolts and your palms sweat; suffer 3 Horror ( negates)."
+
 [HorrorByakhee01]
 monster=Byakhee
 text={ffg:MONSTER_BYAKHEE_HORROR_01}
