--- a/content/MoM/cotw/monsters.ini
+++ b/content/MoM/cotw/monsters.ini
@@ -74,7 +74,7 @@ image="../ffg/img/Monster_Dunwich_Horror.dds"
 ; Optional health modifier from number of players
 health=2
 healthperhero=3
-traits=beast
+traits=horror
 
 [MonsterWizard]
 ; Optional name for display (if spaces or other formatting required)
