#467 Adding monster tokens

--- a/content/MoM/btt/tokens.ini
+++ b/content/MoM/btt/tokens.ini
@@ -46,3 +46,8 @@ x=780
 y=390
 height=130
 width=130
+
+[TokenThrall]
+name={ffg:MONSTER_THRALL}
+image="../ffg/img/Monster_Thrall.dds"
+traits=monster
