Fixing broken D2E tiles

--- a/content/D2E/boxed/mob/tiles.ini
+++ b/content/D2E/boxed/mob/tiles.ini
@@ -10,7 +10,7 @@ reverse=TileSide78B
 name="78B"
 top=164
 left=164
-image="../../ffg/img/078A.dds"
+image="../../ffg/img/078B.dds"
 traits=inside
 reverse=TileSide78A
 
