First pass at moving things

--- a/content/MoM/base/content_pack.ini
+++ b/content/MoM/base/content_pack.ini
@@ -5,6 +5,18 @@ name={ffg:PRODUCT_TITLE_MAD20}
 ; Optional description
 description=Base Game, required to play
 
+[PackTypebox]
+name=Boxed Expansions
+image="{import}/img/MAD23.dds"
+
+[PackTypeft]
+name=Figure and Tile Collection
+image="{import}/img/MAD21.dds"
+
+[PackTypeck]
+name=Conversion Kit
+image="{import}/img/MAD01.dds"
+
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
 [ContentPackData]
