--- a/content/MoM/btt/content_pack.ini
+++ b/content/MoM/btt/content_pack.ini
@@ -4,6 +4,7 @@ name={ffg:PRODUCT_TITLE_MAD23}
 description={ffg:PRODUCT_TITLE_MAD23}
 image="{import}/img/MAD23.dds"
 id=BtT
+type=box
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
