--- a/content/MoM/ck/cotw/content_pack.ini
+++ b/content/MoM/ck/cotw/content_pack.ini
@@ -3,6 +3,7 @@ name={ffg:PRODUCT_TITLE_MAD09}
 description=First edition expansion, can use tiles, investigators and monsters.
 image="{import}/img/MAD09.dds"
 id=CotW
+type=ck
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
