--- a/content/MoM/ck/fa/content_pack.ini
+++ b/content/MoM/ck/fa/content_pack.ini
@@ -1,9 +1,10 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD01}
-description=First Edition, can use tiles monsters and investigators
-image="{import}/img/MAD01.dds"
-id=MoM1E
+name={ffg:PRODUCT_TITLE_MAD06}
+description=First edition expansion, can use tiles, investigators and monsters.
+image="{import}/img/MAD06.dds"
+id=FA
+type=ck
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
