More content restructure.

--- a/content/MoM/rn/content_pack.ini
+++ b/content/MoM/rn/content_pack.ini
@@ -4,5 +4,5 @@ name=Recurring Nightmares
 description={ffg:PRODUCT_TITLE_MAD21}
 image="{import}/img/MAD21.dds"
 id=RN
-clone=MoM1E
+clone=MoM1ET MoM1EM MoM1EI
 type=ft
