--- a/content/MoM/sm/content_pack.ini
+++ b/content/MoM/sm/content_pack.ini
@@ -4,5 +4,5 @@ name=Suppressed Memories
 description={ffg:PRODUCT_TITLE_MAD22}
 image="{import}/img/MAD22.dds"
 id=SM
-clone=FA CotW
+clone=FAM CotWM FAI CotWI FAT CotWT
 type=ft
