#508 break up conversion kit

--- a/content/MoM/ck/cotw-investigators/content_pack.ini
+++ b/content/MoM/ck/cotw-investigators/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD09}
+name=Call of the Wild Investigators
 description=First edition expansion investigators.
-image="{import}/img/MAD09.dds"
+image="MAD09I.png"
 id=CotWI
 type=ck
 
