--- a/content/MoM/ck/cotw-monsters/content_pack.ini
+++ b/content/MoM/ck/cotw-monsters/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD09}
+name=Call of the Wild Monsters
 description=First edition expansion monsters.
-image="{import}/img/MAD09.dds"
+image="MAD09M.png"
 id=CotWM
 type=ck
 
