--- a/content/MoM/ck/cotw-tiles/content_pack.ini
+++ b/content/MoM/ck/cotw-tiles/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD09}
+name=Call of the Wild Tiles
 description=First edition expansion tiles
-image="{import}/img/MAD09.dds"
+image="MAD09T.png"
 id=CotWT
 type=ck
 
