--- a/content/MoM/ck/fa-investigators/content_pack.ini
+++ b/content/MoM/ck/fa-investigators/content_pack.ini
@@ -1,8 +1,8 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD06}
+name=Forbidden Alchemy Investigators
 description=First edition expansion investigators.
-image="{import}/img/MAD06.dds"
+image="MAD06I.png"
 id=FAI
 type=ck
 
