--- a/content/MoM/ck/fa-monsters/content_pack.ini
+++ b/content/MoM/ck/fa-monsters/content_pack.ini
@@ -1,8 +1,8 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD06}
+name=Forbidden Alchemy Monsters
 description=First edition expansion monsters
-image="{import}/img/MAD06.dds"
+image="MAD06M.png"
 id=FAM
 type=ck
 
