--- a/content/MoM/ck/fa-tiles/content_pack.ini
+++ b/content/MoM/ck/fa-tiles/content_pack.ini
@@ -1,8 +1,8 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD06}
+name=Forbidden Alchemy Tiles
 description=First edition expansion Tiles
-image="{import}/img/MAD06.dds"
+image="MAD06T.png"
 id=FAT
 type=ck
 
