--- a/content/MoM/ck/mom1e-monsters/content_pack.ini
+++ b/content/MoM/ck/mom1e-monsters/content_pack.ini
@@ -1,8 +1,8 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD01}
+name=Mansions of Madness Fist Edition Monsters
 description=First Edition Monsters
-image="{import}/img/MAD01.dds"
+image="MAD01M.png"
 id=MoM1EM
 type=ck
 
