--- a/content/MoM/ck/mom1e-tiles/content_pack.ini
+++ b/content/MoM/ck/mom1e-tiles/content_pack.ini
@@ -1,8 +1,8 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={ffg:PRODUCT_TITLE_MAD01}
+name=Mansions of Madness Fist Edition Tiles
 description=First Edition, base game tiles
-image="{import}/img/MAD01.dds"
+image="MAD01T.png"
 id=MoM1ET
 type=ck
 
