#527 Fixing random numbers in perils.

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -119,8 +119,8 @@ button1="Continue"
 
 ; replace {0} with damage (how much?)
 [PerilMajor2]
-text={ffg:PERIL_MAJOR_2_RULES:{0}:{rnd:2:4}}
-operations=$perilMajor,=,0
+text={ffg:PERIL_MAJOR_2_RULES:{0}:{var:$perilm2value}}
+operations=$perilMajor,=,0 $perilm2value,=,#rand3 $perilm2value,+,1
 event1=
 button1="Continue"
 
@@ -171,8 +171,8 @@ button1="Continue"
 
 ; 0 to damage (maybe 7?)
 [PerilDeadly1]
-text={ffg:PERIL_DEADLY_1_RULES:{0}:{rnd:7:7}}
-operations=$perilDeadly,=,0
+text={ffg:PERIL_DEADLY_1_RULES:{0}:{var:$perild1value}}
+operations=$perilDeadly,=,0 $perild1value,=,7
 event1=
 button1="Continue"
 
