--- a/content/MoM/ck/mom1e-investigators/content_pack.ini
+++ b/content/MoM/ck/mom1e-investigators/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Mansions of Madness Fist Edition Investigators
+name=Mansions of Madness First Edition Investigators
 description=First Edition Investigators
 image="MAD01I.png"
 id=MoM1EI
