--- a/content/MoM/ck/mom1e-tiles/content_pack.ini
+++ b/content/MoM/ck/mom1e-tiles/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Mansions of Madness Fist Edition Tiles
+name=Mansions of Madness First Edition Tiles
 description=First Edition, base game tiles
 image="MAD01T.png"
 id=MoM1ET
