Localize text added to MoM content.

--- a/content/MoM/base/content_pack.ini
+++ b/content/MoM/base/content_pack.ini
@@ -6,15 +6,15 @@ name={ffg:PRODUCT_TITLE_MAD20}
 description=Base Game, required to play
 
 [PackTypebox]
-name=Boxed Expansions
+name={pack:BOXED}
 image="{import}/img/MAD23.dds"
 
 [PackTypeft]
-name=Figure and Tile Collection
+name={pack:FANDT}
 image="{import}/img/MAD21.dds"
 
 [PackTypeck]
-name=Conversion Kit
+name={pack:CK}
 image="{import}/img/MAD01.dds"
 
 ; Data, all of these files will be read
@@ -36,3 +36,6 @@ images.ini
 horror_attacks.ini
 dunwich_data.ini
 tokens_monsters.ini
+
+[LanguageData]
+pack Localization.English.txt
