--- a/content/MoM/ck/cotw-investigators/content_pack.ini
+++ b/content/MoM/ck/cotw-investigators/content_pack.ini
@@ -1,5 +1,5 @@
 [ContentPack]
-name=Call of the Wild Investigators
+name={pack:MAD09I}
 description=First edition expansion investigators.
 image="MAD09I.png"
 id=CotWI
