--- a/content/MoM/ck/cotw-tiles/content_pack.ini
+++ b/content/MoM/ck/cotw-tiles/content_pack.ini
@@ -1,5 +1,5 @@
 [ContentPack]
-name=Call of the Wild Tiles
+name={pack:MAD09T}
 description=First edition expansion tiles
 image="MAD09T.png"
 id=CotWT
