--- a/content/MoM/ck/fa-tiles/content_pack.ini
+++ b/content/MoM/ck/fa-tiles/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Forbidden Alchemy Tiles
+name={pack:MAD06T}
 description=First edition expansion Tiles
 image="MAD06T.png"
 id=FAT
