--- a/content/MoM/ck/cotw-monsters/content_pack.ini
+++ b/content/MoM/ck/cotw-monsters/content_pack.ini
@@ -1,5 +1,5 @@
 [ContentPack]
-name=Call of the Wild Monsters
+name={pack:MAD09M}
 description=First edition expansion monsters.
 image="MAD09M.png"
 id=CotWM
