--- a/content/MoM/ck/mom1e-monsters/content_pack.ini
+++ b/content/MoM/ck/mom1e-monsters/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Mansions of Madness First Edition Monsters
+name={pack:MAD06M}
 description=First Edition Monsters
 image="MAD01M.png"
 id=MoM1EM
