--- a/content/MoM/ck/fa-investigators/content_pack.ini
+++ b/content/MoM/ck/fa-investigators/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={pack:MAD06I}
+name={pck:MAD06I}
 description=First edition expansion investigators.
 image="MAD06I.png"
 id=FAI
