--- a/content/MoM/ck/fa-monsters/content_pack.ini
+++ b/content/MoM/ck/fa-monsters/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={pack:MAD06M}
+name={pck:MAD06M}
 description=First edition expansion monsters
 image="MAD06M.png"
 id=FAM
