--- a/content/MoM/ck/mom1e-investigators/content_pack.ini
+++ b/content/MoM/ck/mom1e-investigators/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name={pack:MAD06I}
+name={pck:MAD01I}
 description=First Edition Investigators
 image="MAD01I.png"
 id=MoM1EI
