--- a/content/MoM/rn/content_pack.ini
+++ b/content/MoM/rn/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Recurring Nightmares
+name={ffg:PRODUCT_TITLE_MAD21}
 description={ffg:PRODUCT_TITLE_MAD21}
 image="{import}/img/MAD21.dds"
 id=RN
