--- a/content/MoM/sm/content_pack.ini
+++ b/content/MoM/sm/content_pack.ini
@@ -1,6 +1,6 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Suppressed Memories
+name={ffg:PRODUCT_TITLE_MAD22}
 description={ffg:PRODUCT_TITLE_MAD22}
 image="{import}/img/MAD22.dds"
 id=SM
