#548 Fixing hunting horror horror check

--- a/content/MoM/base/horror.ini
+++ b/content/MoM/base/horror.ini
@@ -666,52 +666,52 @@ text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_10}
 monster=HoundOfTindalos
 text={ffg:MONSTER_HOUND_OF_TINDALOS_HORROR_12}
 
-[HorrorHunting01]
-monster=Hunting
+[HorrorHuntingHorror01]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_01}
 
-[HorrorHunting02]
-monster=Hunting
+[HorrorHuntingHorror02]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_02}
 
-[HorrorHunting03]
-monster=Hunting
+[HorrorHuntingHorror03]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_03}
 
-[HorrorHunting04]
-monster=Hunting
+[HorrorHuntingHorror04]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_04}
 
-[HorrorHunting05]
-monster=Hunting
+[HorrorHuntingHorror05]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_05}
 
-[HorrorHunting06]
-monster=Hunting
+[HorrorHuntingHorror06]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_06}
 
-[HorrorHunting07]
-monster=Hunting
+[HorrorHuntingHorror07]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_07}
 
-[HorrorHunting08]
-monster=Hunting
+[HorrorHuntingHorror08]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_08}
 
-[HorrorHunting09]
-monster=Hunting
+[HorrorHuntingHorror09]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_09}
 
-[HorrorHunting10]
-monster=Hunting
+[HorrorHuntingHorror10]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_10}
 
-[HorrorHunting11]
-monster=Hunting
+[HorrorHuntingHorror11]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_11}
 
-[HorrorHunting12]
-monster=Hunting
+[HorrorHuntingHorror12]
+monster=HuntingHorror
 text={ffg:MONSTER_HUNTING_HORROR_HORROR_12}
 
 [HorrorManiac01]
