Fix horror/awareness display phase

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -11,6 +11,8 @@ traits=small humanoid
 ; Optional health modifier from number of players
 health=1
 healthperhero=1
+awareness=3
+horror=1
 
 [MonsterDeepOne]
 ; Optional name for display (if spaces or other formatting required)
